11710123_project2/test/test_11710123_8.out
Error type 5 at Line 11: unmatching type
Error type 9 at Line 12: the function’s arguments mismatch the declared parameters
