11710123_project2/test/test_11710123_8.spl
struct apple{
    int value;
    char p;
};
int helloworld(){
    struct apple a;
    return a.value;
}

int main(){
    float f = helloworld();
    return helloworld(1);
}